letter grades/ if-else & ternary

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>Letter Grades</title>
 </head>
+
 <body>
-    
+    <p>Letter Grades</p>
+    <img src="./images/a-school-letter-grade-600x400.jpg" alt="">
+  <script src="./script.js"></script>
 </body>
-</html>
+
+</html >
